Fix tests that fail after dependencies upgrade.